<resources>
    <string name="app_name">Go4Lunch</string>

    <!--Main activity xml-->
    <string name="authenticationPicture">Authentication picture</string>
    <string name="connection_button">Log in</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No internet</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="connection_succeed">Connection succeed</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <string name="facebook_application_id">603656987391009</string>
    <string name="fb_login_protocol_scheme">fb603656987391009</string>

    <!--Bottom View Navigation-->
    <string name="title_map_view">Map View</string>
    <string name="title_list_view">List View</string>
    <string name="title_workmates">Workmates</string>

    <!--Drawer View Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_drawer_desc">drawer description</string>
    <string name="nav_header_title">Go4Lunch</string>
    <string name="nav_header_drawer_email">drawer email</string>
    <string name="nav_header_drawer_name">drawer name</string>

    <string name="menu_your_lunch">YOUR LUNCH</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_log_out">LOGOUT</string>

    <string name="action_seek">research</string>
    <string name="info_no_username_found">no username found</string>
    <string name="info_no_email_found">no email found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="notifications">Notification</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="search">search</string>
    <string name="msg_token_fmt">msg token</string>
    <string name="default_notification_channel_id">channel id default</string>
    <string name="search_label">Go4Lunch</string>
    <string name="search_hint">Restaurant name</string>
    <string name="channel_name">notification channel</string>
    <string name="channel_description">channel description</string>
    <string name="not_decided">hasn\'t decided yet</string>
    <string name="eat_at">eating at</string>
    <string name="title_restaurant_details">Restaurant details</string>
    <string name="sort_by_stars">Sort by stars</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="all_restaurants">All restaurants</string>
    <string name="restaurant_not_chosen">No restaurant chosen</string>


</resources>