<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_drawer_navigation"
    app:startDestination="@+id/nav_lunch"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lunch"
            android:icon="@drawable/ic_baseline_local_dining_24"
            android:title="@string/menu_your_lunch" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/menu_log_out" />
    </group>
</menu>