<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map_view">


    <fragment
        android:id="@+id/navigation_map_view"
        android:name="com.example.go4lunch.ui.mapview.MapViewFragment"
        android:label="@string/title_map_view"
        tools:layout="@layout/fragment_map_view" >
        <action
            android:id="@+id/action_navigation_map_view_to_navigation_restaurantDetails"
            app:destination="@id/restaurant_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list_view"
        android:name="com.example.go4lunch.ui.listview.ListViewFragment"
        android:label="@string/title_list_view"
        tools:layout="@layout/fragment_list_view" >
        <action
            android:id="@+id/action_navigation_list_view_to_navigation_restaurantDetails"
            app:destination="@id/restaurant_details">
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.example.go4lunch.ui.workmates.WorkmatesFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/fragment_workmates" >
        <action
            android:id="@+id/action_navigation_workmates_to_restaurant_details"
            app:destination="@id/restaurant_details" />
    </fragment>

    <fragment
        android:id="@+id/restaurant_details"
        android:name="com.example.go4lunch.ui.RestaurantDetailsFragment"
        android:label="fragment_restaurant_details"
        tools:layout="@layout/fragment_restaurant_details">
        <argument
            android:name="place_id"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="from drawer" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.go4lunch.ui.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />


</navigation>